--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "node-fetch": "^1.6.0"
   },
   "devDependencies": {
-    "check-url": "^1.0.0"
+    "check-url": "^1.0.0",
+    "npm-run-all": "3.1.0"
   },
   "homepage": "https://github.com/pdehaan/alexa-top-sites#readme",
   "keywords": [
@@ -26,6 +27,9 @@
     "url": "git+https://github.com/pdehaan/alexa-top-sites.git"
   },
   "scripts": {
-    "test": "node test-category"
+    "test": "npm-run-all test:*",
+    "test:category": "node test-category",
+    "test:country": "node test-country",
+    "test:global": "node test-global"
   }
 }
